WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44706
SVG Filter with wrong results on repaint for non-CG platforms
https://bugs.webkit.org/show_bug.cgi?id=44706
Summary
SVG Filter with wrong results on repaint for non-CG platforms
Dirk Schulze
Reported
2010-08-26 12:06:11 PDT
SVG Filter with wrong results on repaint for non-CG platforms. The transformation of the resulting ImagBuffer on SVG Filter is transformed to linearRGB on every repaint. It should just be transformed once.
Attachments
Patch
(33.16 KB, patch)
2010-08-26 12:17 PDT
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2010-08-26 12:17:19 PDT
Created
attachment 65596
[details]
Patch
Nikolas Zimmermann
Comment 2
2010-08-27 01:00:05 PDT
Comment on
attachment 65596
[details]
Patch Good quick fix. I'd still love to see a follow-up patch, which centralizes the !PLATFORM(CG) hacks. I think we even have a bug report about that?
Dirk Schulze
Comment 3
2010-08-27 04:40:27 PDT
Comment on
attachment 65596
[details]
Patch Clearing flags on attachment: 65596 Committed
r66204
: <
http://trac.webkit.org/changeset/66204
>
Dirk Schulze
Comment 4
2010-08-27 04:40:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug