2010-08-27  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG Filter with wrong results on repaint for non-CG platforms
        https://bugs.webkit.org/show_bug.cgi?id=44706

        The result of SVG Filter is transformed to linearRGB on every repaint.
        Transform the result just once, right after creating it.

        Test: svg/repaint/filter-repaint.svg

        * rendering/RenderSVGResourceFilter.cpp:
        (WebCore::RenderSVGResourceFilter::postApplyResource):
2010-08-27  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG Filter with wrong results on repaint for non-CG platforms
        https://bugs.webkit.org/show_bug.cgi?id=44706

        Test that repainting a Filter does not change the result.

        * platform/mac/svg/repaint: Added.
        * platform/mac/svg/repaint/filter-repaint-expected.checksum: Added.
        * platform/mac/svg/repaint/filter-repaint-expected.png: Added.
        * platform/mac/svg/repaint/filter-repaint-expected.txt: Added.
        * svg/repaint: Added.
        * svg/repaint/filter-repaint.svg: Added.


Canonical link: https://commits.webkit.org/56976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66204 268f45cc-cd09-0410-ab3c-d52691b4dbfc